Mejorando el aspecto visual

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <title>Petshop</title>
   </head>
   <header>
-    <section>
+    <div class="top">
       <p>Grandes ofertas en comederos</p>
       <p>Español</p>
       <p>$ARG</p>
-    </section>
-    <section>
+    </div>
+    <div>
         <nav>
             <img src="img/Logo.svg" alt="Logo">
             <p>Categorias</p>
@@ -22,18 +22,18 @@
             <p>Nosotros</p>
             <p>Contactanos</p>
         </nav>
-    </section>
+    </div>
   </header>
   <body>
     <section>
-        <img src="img/bowl-and-pet-daities-on-green-background 1.svg" alt="Plato de comida de perro con huesos"
+        <img src="img/bowl-and-pet-daities-on-green-background 1.svg" alt="Plato de comida de perro con huesos">
     </section>
-    <div>
+    <div class="menu-nav">
         <p>¡Es un placer tenerte aquí!</p>
         <p>¡Comederos en descuento!</p>
         <button type="button" id="btncopiar">COMEDEROS</button>
     </div>
-    <section class="productos">
+    <div class="menu-productos">
         <img src="img/pawprint 1.svg"  alt="Patita de perro">
         <p>Productos Destacados</p>
         <ul>
@@ -41,17 +41,17 @@
             <li>Accesorios</li>
             <li>Comida</li>
         </ul>
+    </div>
+    <div class="menu-imagenes">
         <img src="img/churrasquito.svg" alt="Jugue para perro en forma de filetes">
         <img src="img/comedero.svg" alt="Comedero para mascotas">
         <img src="img/Huesito.svg" alt="Huesitos de juguete para perro">
-        <p>Juguete Churrasquito</p>
-        <p>$150</p>
-        <p>Comedero para perro</p>
-        <p>$250</p>
-        <p>Juguete huesito</p>
-        <p>$650</p>
-      
-        
+    </div>
+    <div class="menu-precios">
+        <p>Juguete Churrasquito $150</p>
+        <p>Comedero para perro $250</p>
+        <p>Juguete huesito $650</p>
+    </div>
     </section>
     <footer>
         <p>Todos los derechos reservados Front End</p>
