--- a/index.html
+++ b/index.html
@@ -4,57 +4,95 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <title>Petshop</title>
   </head>
   <header>
-    <div class="top">
+    <section class="header-container-top">
       <p>Grandes ofertas en comederos</p>
-      <p>Español</p>
-      <p>$ARG</p>
-    </div>
-    <div>
-        <nav>
-            <img src="img/Logo.svg" alt="Logo">
-            <p>Categorias</p>
-            <p>Pets</p>
-            <p>Nosotros</p>
-            <p>Contactanos</p>
-        </nav>
-    </div>
+      <ul class="header-lista">
+        <li>Español</li>
+        <li>$ARG</li>
+      </ul>
+    </section>
+    <section class="header-container-bottom">
+      <p class="logo-header">
+        <img src="img/Cat.png" alt="gato" />
+        <span class="logo-first">Front</span>
+        Cat&Dog
+        <img src="img/Dog.png" alt="perro" />
+      </p>
+      <nav>
+        <ul class="nav-container">
+          <li>
+            <img src="img/pawprint 1.png" alt="" /><span>Categorías</span>
+          </li>
+          <li><img src="img/pawprint 1.png" alt="" /><span>Pets</span></li>
+          <li><img src="img/pawprint 1.png" alt="" /><span>Nosotros</span></li>
+          <li>
+            <img src="img/pawprint 1.png" alt="" /><span>Contactanos</span>
+          </li>
+        </ul>
+      </nav>
+    </section>
   </header>
   <body>
-    <section>
-        <img src="img/bowl-and-pet-daities-on-green-background 1.svg" alt="Plato de comida de perro con huesos">
-    </section>
-    <div class="menu-nav">
-        <p>¡Es un placer tenerte aquí!</p>
+    <section class="banner">
+      <div class="banner-div">
+        <span class="banner-title">¡Es un placer tenerte aquí! </span>
         <p>¡Comederos en descuento!</p>
-        <button type="button" id="btncopiar">COMEDEROS</button>
-    </div>
-    <div class="menu-productos">
-        <img src="img/pawprint 1.svg"  alt="Patita de perro">
-        <p>Productos Destacados</p>
-        <ul>
-            <li>Comederos</li>
-            <li>Accesorios</li>
-            <li>Comida</li>
-        </ul>
-    </div>
-    <div class="menu-imagenes">
-        <img src="img/churrasquito.svg" alt="Jugue para perro en forma de filetes">
-        <img src="img/comedero.svg" alt="Comedero para mascotas">
-        <img src="img/Huesito.svg" alt="Huesitos de juguete para perro">
-    </div>
-    <div class="menu-precios">
-        <p>Juguete Churrasquito $150</p>
-        <p>Comedero para perro $250</p>
-        <p>Juguete huesito $650</p>
-    </div>
+        <a href="">Comederos</a>
+      </div>
+    </section>
+    <section class="products-nav">
+      <img src="img/pawprint 1.svg" alt="Patita de perro" />
+      <p class="titulo">Productos Destacados</p>
+      <p class="opciones"><span>Comederos-</span><span>Accesorios-</span><span>Comida</span></p>
+    </section>
+    <section class="products-menu">
+      <div>
+        <img src="img/churrasquito.png" alt="Jugue para perro en forma de filetes" />
+        <p>Juguete Churrasquito</p>
+        <span>$150</span>
+      </div>
+      <div>
+        <img src="img/comedero.png" alt="Comedero para mascotas" />
+        <p>Comedero para perro</p>
+        <span>$250</span>
+      </div>
+      <div>
+        <img src="img/Huesito.png" alt="Huesitos de juguete para perro" />
+        <p>Juguete huesito</p>
+        <span>$650</span>
+      </div>
     </section>
     <footer>
-        <p>Todos los derechos reservados Front End</p>
+      <section class="footer-top">
+        <p class="logo-footer">
+          <img src="img/Cat.png" alt="gato" />
+          <span class="logo-second">Front</span>
+          Cat&Dog
+          <img src="img/Dog.png" alt="perro" />
+        </p>
+        <div>
+          <img src="img/Locacion.svg" alt="icono de ubicación" />
+          <p>Localidad</p>
+          <span>Calle - provincia</span>
+        </div>
+        <div>
+          <img src="img/Locacion.svg" alt="icono de ubicación" />
+          <p>Teléfono</p>
+          <span>Número de télefono</span>
+        </div>
+        <div>
+          <img src="img/Locacion.svg" alt="icono de ubicación" />
+          <p>Correo Electrónico</p>
+          <span>Direccion de correo</span>
+        </div>
+      </section>
+      <section class="footer-bottom">
+      <p>Todos los derechos reservados Front End</p>
+    </section>
     </footer>
   </body>
 </html>
