--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://kit.fontawesome.com/1e0e02a768.js" crossorigin="anonymous"></script>
     <title>Petshop</title>
   </head>
   <header>
@@ -22,16 +23,22 @@
         Cat&Dog
         <img src="img/Dog.png" alt="perro" />
       </p>
+      <div class="menutoggle">
+        <input type="checkbox" id="toggle">
+        <label for="toggle"><i class="fas fa-bars"></i></label>
+        <ul class="menu-list">
+          <li>Categorías</li>
+          <li>Pets</li>
+          <li>Nosotros</li>
+          <li>Contáctanos</li>
+        </ul>
+      </div>
       <nav>
         <ul class="nav-container">
-          <li>
-            <img src="img/pawprint 1.png" alt="" /><span>Categorías</span>
-          </li>
+          <li><img src="img/pawprint 1.png" alt="" /><span>Categorías</span></li>
           <li><img src="img/pawprint 1.png" alt="" /><span>Pets</span></li>
           <li><img src="img/pawprint 1.png" alt="" /><span>Nosotros</span></li>
-          <li>
-            <img src="img/pawprint 1.png" alt="" /><span>Contactanos</span>
-          </li>
+          <li><img src="img/pawprint 1.png" alt="" /><span>Contactanos</span></li>
         </ul>
       </nav>
     </section>
@@ -47,11 +54,18 @@
     <section class="products-nav">
       <img src="img/pawprint 1.svg" alt="Patita de perro" />
       <p class="titulo">Productos Destacados</p>
-      <p class="opciones"><span>Comederos-</span><span>Accesorios-</span><span>Comida</span></p>
+      <ul>
+        <li>Comedores</li>
+        <li>Accesorios</li>
+        <li>Comida</li>
+      </ul>
     </section>
     <section class="products-menu">
       <div>
-        <img src="img/churrasquito.png" alt="Jugue para perro en forma de filetes" />
+        <img
+          src="img/churrasquito.png"
+          alt="Jugue para perro en forma de filetes"
+        />
         <p>Juguete Churrasquito</p>
         <span>$150</span>
       </div>
@@ -68,31 +82,41 @@
     </section>
     <footer>
       <section class="footer-top">
-        <p class="logo-footer">
-          <img src="img/Cat.png" alt="gato" />
-          <span class="logo-second">Front</span>
-          Cat&Dog
-          <img src="img/Dog.png" alt="perro" />
-        </p>
-        <div>
-          <img src="img/Locacion.svg" alt="icono de ubicación" />
-          <p>Localidad</p>
-          <span>Calle - provincia</span>
+        <div class="conteiner-left">
+          <div>
+            <img src="img/location.svg" alt="icono de ubicación" />
+            <div>
+              <h3>Localidad</h3>
+              <p>Calle - provincia</p>
+            </div>
+          </div>
+          <div>
+            <img src="img/Telefono.svg" alt="icono de ubicación" />
+            <div>
+              <h3>Teléfono</h3>
+              <p>Número de télefono</p>
+            </div>
+          </div>
+          <div>
+            <img src="img/correo.svg" alt="icono de ubicación" />
+            <div>
+              <h3>Correo Electrónico</h3>
+              <p>Direccion de correo</p>
+            </div>
+          </div>
         </div>
-        <div>
-          <img src="img/Locacion.svg" alt="icono de ubicación" />
-          <p>Teléfono</p>
-          <span>Número de télefono</span>
-        </div>
-        <div>
-          <img src="img/Locacion.svg" alt="icono de ubicación" />
-          <p>Correo Electrónico</p>
-          <span>Direccion de correo</span>
+        <div class="conteiner-right">
+          <p class="logo-footer">
+            <img src="img/Cat.png" alt="gato" />
+            <span class="logo-second">Front</span>
+            Cat&Dog
+            <img src="img/Dog.png" alt="perro" />
+          </p>
         </div>
       </section>
       <section class="footer-bottom">
-      <p>Todos los derechos reservados Front End</p>
-    </section>
+        <p>Todos los derechos reservados Front End</p>
+      </section>
     </footer>
   </body>
 </html>
